--- a/src/scss/_messenger.scss
+++ b/src/scss/_messenger.scss
@@ -55,6 +55,8 @@
 }
 .borderBottom {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    position: fixed; 
+    width: 60%;
 }
 .receive-text {
     background-color: #ebedef;
@@ -76,7 +78,9 @@
     height: 10px;
 }
 .message {
-    margin-bottom: 10px;
+    overflow-y: auto;
+    max-height: 825px;
+    margin-top: 67px;
 }
 .clearfix {
     float: none;
@@ -93,4 +97,10 @@
 }
 .active {
     background-color: #ebedef;
+}
+.footer {
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 20px 40px;
+    height: 75px;
 }
